chore: change openapi.yml for a complete one
