# lib/controllers/hello.js
@@ -22,11 +22,23 @@ function showPetById(request, reply) {
   console.log(request.params);
   console.log(request.headers);
 
-  reply.send({ hello: 'showPetById' });
+  reply.send({ id: request.params.id, name : 'toto', tag: 'tutu' });
 }
+
+function deletePet(request, reply) {
+  console.log(request.body);
+  console.log(request.query);
+  console.log(request.params);
+  console.log(request.headers);
+
+  reply.send({ hello: 'deletePet' });
+}
+
+
 
 module.exports = {
   listPets,
   createPets,
   showPetById,
+  deletePet,
 };
